--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@types/express": "^4.17.14",
     "@types/jest": "^29.2.3",
     "@types/node": "^18.11.9",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3"
   },
   "scripts": {
-    "test": "jest --passWithNoTests --silent --noStackTrace --runInBand --watch"
+    "test": "jest --passWithNoTests --silent --noStackTrace --runInBand --watch",
+    "dev": "ts-node-dev --transpile-only --respawn src/shared/infra/main.ts"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
